--- a/index.html
+++ b/index.html
@@ -1,1 +1,119 @@
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+
+<body style="background-color: gray">
+    <header class="page-header">
+        <nav class="page-header-nav">
+            <a href="#" class="logo">
+                <img src="img/logo.svg" alt="logo">
+            </a>
+            <ul class="site-navigation">
+                <li class="site-navigation-item"><a href="#">О нас</a></li>
+                <li class="site-navigation-item"><a href="#">Расписание</a></li>
+                <li class="site-navigation-item"><a href="#">Стоимость</a></li>
+                <li class="site-navigation-item"><a href="#">Отзиви</a></li>
+            </ul>
+            <ul class="user-navigation">
+                <li><a href="#">+7 918 365 01 02</a></li>
+            </ul>
+        </nav>
+        <section class="promo">
+            <div class="promo-text">
+                <h1 class="promo-title">Студия пилатеса</h1>
+                <p class="promo-paragraph">Твое здоровое тело через 10 занятий</p>
+                <a href="#" class="promo-link">Смотреть расписание</a>
+            </div>
+            <div class="promo-img">
+                <img src="img/athletic-body.png" alt="woman straching">
+            </div>
+        </section>
+    </header>
+    <main>
+        <section class="about">
+            <div class="about-text">
+                <h2 class="about-title">&#8212; О пилатесе</h2>
+                <p class="about-paragraph">
+                    Пилатес соединяет элементы растяжки с элементами силовой тренировки
+                    Комплекс упражнений укрепляет мышцы пресса и спины, улучшает гибкость мышц и связок, подвижность
+                    суставов и избавляет от дискомфорта в позвоночнике</p>
+                <a href="#" class="about-link">Подробнее</a>
+            </div>
+            <div class="about-img">
+                <img src="img/pilates-studio-photo.png" alt="people at pilates studio">
+            </div>
+        </section>
+        <section class="price">
+            <h2 class="price-title">&#8212; Тарифи</h2>
+            <ul class="price-list">
+                <li class="price-list-item">
+                    <h3>Уровень</h3>
+                    <p class="price-level">Новичок</p>
+                    <p class="price-amout"></p>
+                    <p>150 руб. / занятие</p>
+                    <a href="#">Записаться</a>
+                    <img src="img/arrow.svg" alt="arrow">
+                </li>
+                <li class="price-list-item">
+                    <h3>Уровень</h3>
+                    <p class="price-level">Профи</p>
+                    <p class="price-amout">200 руб. / занятие</p>
+                    <a href="#">Записаться</a>
+                    <img src="img/arrow.svg" alt="arrow">
+                </li>
+                <li class="price-list-item">
+                    <h3>Уровень</h3>
+                    <p class="price-level">Мастер</p>
+                    <p class="price-amout">350 руб. / занятие</p>
+                    <a href="#">Записаться</a>
+                    <img src="img/arrow.svg" alt="arrow">
+                </li>
+            </ul>
+        </section>
+        <section class="reviews">
+            <h2 class="reviews-title">&#8212; Отзиви</h2>
+            <ul class="reviews-list">
+                <li class="reviews-list-item">
+                    <img src="img/user001.jpg" alt="Вероника Кулешова">
+                    <h3>Вероника Кулешова</h3>
+                    <p class="age">25 лет</p>
+                    <p>Хожу на пилатес уже пять месяцев. После десяти занятий уже увидела результат: тело подтянулось,
+                        улучшилась осанка, появился пресс. И самое главное, пропал сильный изгиб поясничного отдела,
+                        который меня очень беспокоил.</p>
+                </li>
+                <li class="reviews-list-item">
+                    <img src="img/user010.jpg" alt="Надежда Петрова">
+                    <h3>Надежда Петрова</h3>
+                    <p class="age">23 года</p>
+                    <p></p>
+                </li>
+                <li class="reviews-list-item">
+                    <img src="img/user107.jpg" alt="Оксана Тодоренко">
+                    <h3>Оксана Тодоренко</h3>
+                    <p class="age">19 лет</p>
+                    <p>
+                        Начала заниматься пилатесом по достаточно банальной причине – хотелось поддерживать хорошую
+                        форму, и не ездить на занятия далеко от дома. занятие пилатесом с инвентарем Зал пилатеса был
+                        буквально через дорогу, поэтому и записалась туда.</p>
+                </li>
+            </ul>
+        </section>
+    </main>
+    <footer class="page-footer">
+        <p class="copyright">Pilates Plus, 2017 &copy;</p>
+        <a href="#"><img src="img/logo.svg" alt="logo"></a>
+        <ul class="social-list">
+            <li class="social-list-item"><a href="#"><img src="img/vk.svg" alt="vk"></a></li>
+            <li class="social-list-item"><a href="#"><img src="img/facebook.svg" alt="facebook"></a></li>
+            <li class="social-list-item"><a href="#"><img src="img/instagram.svg" alt="instagram"></a></li>
+        </ul>
+    </footer>
+</body>
+
+</html>
